tests/error/assignment_of_array_of_unknown_size.c
// fail "Array can only be initialized by {initializer-list} or "string literal"."

int main(){
    char ident_0[] = ident_0;
}
